--- a/tank_driver/CMakeLists.txt
+++ b/tank_driver/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(tank_driver)
 
-## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
@@ -11,7 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
+catkin_python_setup()
 
 
 
@@ -25,10 +23,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES car_control
-#  CATKIN_DEPENDS rospy
-#  DEPENDS system_lib
+   CATKIN_DEPENDS rospy
 )
 
 
@@ -42,7 +37,7 @@ catkin_package(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-   scripts/tank_control_node.py
+   scripts/tank_control_node
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
     )
 
