--- a/tank_stack/package.xml
+++ b/tank_stack/package.xml
@@ -14,6 +14,7 @@
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
+  <buildtool_depend>catkin</buildtool_depend>
 
 
     <exec_depend>tank_driver</exec_depend>
