--- a/tank_driver/config/config.yaml
+++ b/tank_driver/config/config.yaml
@@ -1,36 +1,36 @@
 # Define the pins
 Definition:
-  -   28: left_motor_forward # control Left motor forward
-  -   29: left_motor_backward # control Left motor back
-  -   24: right_motor_forward # control Right motor forward
-  -   25: right_motor_backward # control Right motor back
-  -   27: left_motor_pwm # control the speed of the left motor
-  -   23: right_motor_pwm # control the speed of the right motor
+  -   28: left_motor_forward # control Left motor forward HD: 28
+  -   21: left_motor_backward # control Left motor back HD :21
+  -   19: right_motor_forward # control Right motor forward HD: 19
+  -   26: right_motor_backward # control Right motor back HD: 26
+  -   16: left_motor_pwm # control the speed of the left motor HD:16
+  -   13: right_motor_pwm # control the speed of the right motor HD: 13
 
 Direction:
   - 28: out
-  - 29: out
-  - 24: out
-  - 25: out
-  - 27: out
-  - 23: out
+  - 21: out
+  - 19: out
+  - 26: out
+  - 16: out
+  - 13: out
 
 # Define default pin states.
 states:
   - 28: 1
-  - 29: 1
-  - 24: 1
-  - 25: 1
-  - 27: 20
-  - 23: 20
+  - 21: 1
+  - 19: 1
+  - 26: 1
+  - 16: 0
+  - 13: 0
 
 shutdown_states:
--   28: 0
--   29: 0
--   24: 0
--   25: 0
--   27: 0
--   23: 0
+  - 28: 0
+  - 21: 0
+  - 19: 0
+  - 26: 0
+  - 16: 0
+  - 13: 0
 
 timeout: 5
 
